# gdcd

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  acconfig.h  config.h.in  configure  configure.in
images/: Makefile.am  Makefile.in
pixmaps/: Makefile.am  Makefile.in  background.xpm  control_buttons.xpm  gdcd.xpm  letters.xpm  max_mask.xpm  misc_buttons.xpm  netops.xpm  numbers.xpm  sizemaps.xpm  status.xpm
source/: Makefile.am  Makefile.in  buttons.c  buttons.h  cddb.c  cdfunction.c  cdfunction.h  conf.c  conf.h  coverart.c  coverart.h  dialog.c  gdcd.c  letters.c  letters.h  numbers.c  numbers.h  resize.c  thread.c
