AC_INIT(source/gdcd.c)

MAJOR_VERSION=0
MINOR_VERSION=2
MICRO_VERSION=1

PACKAGE=gdcd
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

AC_ARG_PROGRAM
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CANONICAL_HOST

AC_CHECK_LIB(pthread, pthread_create, PTHREAD_LIBS="-lpthread", AC_MSG_ERROR(Couldn't locate a POSIX threads library))

CDAUDIO_LIBS="-lcdaudio"

AM_PATH_GLIB(1.2.0,,,)
AM_PATH_GTK(1.2.0)

AC_PATH_PROG(GTK_CONFIG,gtk-config,no)
if test x$GTK_CONFIG != xno; then
        GTK_LIBS=`$GTK_CONFIG --libs`
        GTK_CFLAGS=`$GTK_CONFIG --cflags`
else
	AC_MSG_ERROR(Couldn't locate gtk-config)
fi

AC_PATH_PROG(LIBART_CONFIG,libart-config,no)
if test x$LIBART_CONFIG != xno; then
	echo "Using installed libart_lgpl"
	LIBART_LIBS=`$LIBART_CONFIG --libs`
	LIBART_CFLAGS=`$LIBART_CONFIG --cflags`
else
	LIBART_LIBS=""
	LIBART_CFLAGS=""
fi

AC_PATH_PROG(GNOME_CONFIG,gnome-config,no)
if test x$GNOME_CONFIG != xno; then
	GNOME_LIBS=`$GNOME_CONFIG --libs gnomeui`
	GNOME_CFLAGS=`$GNOME_CONFIG --cflags gnomeui`
else
	GNOME_LIBS=""
	GNOME_CFLAGS=""
fi

AC_SUBST(PTHREAD_LIBS)
AC_SUBST(CDAUDIO_LIBS)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(LIBART_LIBS)
AC_SUBST(LIBART_CFLAGS)
AC_SUBST(GNOME_LIBS)
AC_SUBST(GNOME_CFLAGS)

AC_CHECK_LIB(gdk_pixbuf, gdk_pixbuf_new_from_file, GDKPIXBUF_LIBS="-lgdk_pixbuf";IMLIB_LIBS="", GDKPIXBUF_LIBS="",$GTK_LIBS $GNOME_LIBS $LIBART_LIBS)
if test "$GDKPIXBUF_LIBS" == ""; then
	AC_CHECK_LIB(gdk_imlib, gdk_imlib_load_image, IMLIB_LIBS="-lgdk_imlib"; AC_DEFINE(IMLIB_IMAGING), AC_MSG_ERROR(Couldn't locate GdkPixbuf or Imlib), $GTK_LIBS)
fi

AC_SUBST(GDKPIXBUF_LIBS)
AC_SUBST(IMLIB_LIBS)

IMAGE_PATH='${prefix}/share/gdcd'
AC_SUBST(IMAGE_PATH)

case "$host_os" in
  irix*)
    AC_DEFINE(DEFAULT_DEVICE, "default")
    ;;

  *bsd*)
    AC_DEFINE(DEFAULT_DEVICE, "/dev/wcd0a")
    ;;

  *linux*)
    AC_DEFINE(DEFAULT_DEVICE, "/dev/cdrom")
    ;;
esac

AC_OUTPUT(Makefile source/Makefile pixmaps/Makefile images/Makefile)
