## Process this file with automake to produce Makefile.in

EXTRA_DIST=blues.png data.png folk.png jazz.png misc.png newage.png nodisc.png reggae.png rock.png soundtrack.png unknown.png

install-data-am:
	$(mkinstalldirs) ${prefix}/share/gdcd
	$(INSTALL) -m 644 blues.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 data.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 folk.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 jazz.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 misc.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 newage.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 nodisc.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 reggae.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 rock.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 soundtrack.png ${prefix}/share/gdcd
	$(INSTALL) -m 644 unknown.png ${prefix}/share/gdcd
